<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="bottom"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:id="@+id/IrbidButton"
            android:text="@string/irbid_status"
            android:background="@drawable/bg_main_card"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:id="@+id/AqabaButton"
            android:text="@string/aqaba_status"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_item_2"
            android:layout_marginTop="@dimen/_10sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>